--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -70,7 +70,7 @@ body {
 }
 
 .custom-scrollbar {
-  scrollbar-width: thin;
+  scrollbar-width: 10px;
   scrollbar-color: #ffffff99 transparent;
 }
 
