--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -70,7 +70,7 @@ body {
 }
 
 .custom-scrollbar {
-  scrollbar-width: thin;
+  scrollbar-width: 10px;
   scrollbar-color: #ffffff99 transparent;
 }
 
@@ -125,4 +125,12 @@ body {
 }
 .blacklistDrag {
   -webkit-app-region: no-drag;
+}
+
+*,
+*::after,
+*::before {
+  user-select: none;
+  -webkit-user-select: none;
+  -webkit-user-drag: none;
 }
